--- a/03_multi_agent_with_story.ipynb
+++ b/03_multi_agent_with_story.ipynb
@@ -828,195 +828,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "c87f1d61-79d1-43b3-9808-ba3ad0947afc",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    },
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def process_genie_data_for_visualization(genie_output):\n",
-    "    \"\"\"\n",
-    "    Process Genie's output to make it suitable for the visualization agent.\n",
-    "    \n",
-    "    Args:\n",
-    "        genie_output: The output from the Genie agent\n",
-    "        \n",
-    "    Returns:\n",
-    "        dict: Input suitable for the visualization agent\n",
-    "    \"\"\"\n",
-    "    from tools.visualization_tools import parse_genie_response\n",
-    "    \n",
-    "    # Extract data from Genie's response\n",
-    "    extracted_data = parse_genie_response(genie_output)\n",
-    "    \n",
-    "    # Create an enhanced instruction for the visualization agent\n",
-    "    instruction = f\"\"\"Please create a visualization based on this data: {extracted_data}\n",
-    "    \n",
-    "    If the data appears to be a time series (with dates), please create a line chart showing the trend over time.\n",
-    "    If the data is categorical, please create a bar chart to compare values.\n",
-    "    \n",
-    "    Even if there are issues with the data, please make your best effort to create a visualization with whatever data is available.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Prepare input for visualization agent\n",
-    "    viz_input = {\n",
-    "        \"messages\": genie_output.get(\"messages\", []) + [{\n",
-    "            \"role\": \"user\", \n",
-    "            \"content\": instruction\n",
-    "        }]\n",
-    "    }\n",
-    "    \n",
-    "    return viz_input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "06ba9ae4-034e-4112-8556-498545f814fb",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    },
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Define a simple debug function to print important information about the data\n",
-    "def debug_data(genie_output):\n",
-    "    \"\"\"Print debugging information about the Genie output\"\"\"\n",
-    "    print(\"=\" * 50)\n",
-    "    print(\"DEBUG: Genie Output Structure\")\n",
-    "    print(f\"Type: {type(genie_output)}\")\n",
-    "    \n",
-    "    if isinstance(genie_output, dict):\n",
-    "        print(f\"Keys: {genie_output.keys()}\")\n",
-    "        \n",
-    "        if 'content' in genie_output:\n",
-    "            print(f\"Content type: {type(genie_output['content'])}\")\n",
-    "            print(f\"Content preview: {genie_output['content'][:100]}...\")\n",
-    "        \n",
-    "        if 'messages' in genie_output:\n",
-    "            print(f\"Message count: {len(genie_output['messages'])}\")\n",
-    "            print(f\"Message types: {[msg.get('role') for msg in genie_output['messages']]}\")\n",
-    "            \n",
-    "            # Find assistant messages with content\n",
-    "            assistant_msgs = [msg for msg in genie_output['messages'] if msg.get('role') == 'assistant' and msg.get('content')]\n",
-    "            if assistant_msgs:\n",
-    "                last_msg = assistant_msgs[-1]\n",
-    "                print(f\"Last assistant message preview: {last_msg.get('content', '')[:100]}...\")\n",
-    "    \n",
-    "    print(\"=\" * 50)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "51976d3a-7a8b-4ac8-b6f6-3bac6d651a5c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    },
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Test your multi-agent workflow step by step\n",
-    "from cookbook.agents.genie_agent import GenieAgent\n",
-    "from cookbook.agents.visualization_agent import VisualizationAgent\n",
-    "# Import the extract_table_from_markdown function\n",
-    "from tools.visualization_tools import extract_table_from_markdown\n",
-    "# Initialize the agents\n",
-    "genie_agent = GenieAgent(agent_config=genie_agent_config)\n",
-    "visualization_agent = VisualizationAgent(agent_config=visualization_agent_config)\n",
-    "\n",
-    "# Test query\n",
-    "test_query = {\n",
-    "    \"messages\": [\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": \"Show usage date-wise average currency conversion rate. Take data from enriched table\"\n",
-    "        }\n",
-    "    ]\n",
-    "}\n",
-    "\n",
-    "# Run the query through Genie agent\n",
-    "genie_output = genie_agent.predict(model_input=test_query)\n",
-    "\n",
-    "# Process the Genie output for visualization\n",
-    "viz_input = process_genie_data_for_visualization(genie_output)\n",
-    "\n",
-    "# Run visualization agent with the processed input\n",
-    "try:\n",
-    "    viz_output = visualization_agent.predict(model_input=viz_input)\n",
-    "    print(\"Visualization completed successfully\")\n",
-    "except Exception as e:\n",
-    "    print(f\"Error in visualization agent: {str(e)}\")\n",
-    "    # Create a fallback response\n",
-    "    viz_output = {\n",
-    "        \"content\": \"I couldn't create a visualization from the provided data.\",\n",
-    "        \"messages\": genie_output.get(\"messages\", []) + [{\n",
-    "            \"role\": \"assistant\",\n",
-    "            \"content\": \"I couldn't create a visualization from the provided data.\"\n",
-    "        }]\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "be74ed78-f764-4251-8726-670ccf583949",
+     "nuid": "9aac45a2-a610-47ac-b2d1-39a252baafa6",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "outputs": [],
    "source": [
-    "# from cookbook.agents.function_calling_agent import FunctionCallingAgent\n",
-    "\n",
-    "# Test visualization agent\n",
-    "# viz_agent = FunctionCallingAgent(agent_config=visualization_agent_config)\n",
-    "# output = viz_agent.predict(model_input={\"messages\": [{\"role\": \"user\", \"content\": \"Create a bar chart from this data: ...\"}]})"
+    "Testing MultiAgent"
    ]
   },
   {
@@ -1040,6 +864,22 @@
     "# Run the query\n",
     "output = multi_agent.predict(model_input=test_query)\n",
     "print(output[\"content\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9202ac84-9287-44f0-94a9-20224984ea5b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Testing Genie Agent"
    ]
   },
   {
@@ -1068,6 +908,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a3642b78-827b-4e8f-ae6a-f289f4dcaed9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Testing Visualization Agent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1085,56 +941,11 @@
    },
    "outputs": [],
    "source": [
-    "# Test visualization agent with Genie's output\n",
     "visualization_agent = VisualizationAgent(agent_config=visualization_agent_config)\n",
-    "viz_output = visualization_agent.predict(model_input={\"messages\": output[\"content\"]})\n",
+    "viz_output = visualization_agent.predict(model_input={\n",
+    "    \"messages\": [{\"role\": \"user\", \"content\": genie_output[\"content\"]}]\n",
+    "})\n",
     "print(viz_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1c7d3b61-08d7-413c-b7c1-e0b31f495c51",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "print(json.dumps(output, indent=2, default=str))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "2f7b7302-7e31-40df-88ad-b2c0ba7457ad",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Display the result\n",
-    "print(\"Final Response:\")\n",
-    "print(\"=\" * 80)\n",
-    "print(output[\"content\"])"
    ]
   },
   {
